Remove more Java 11 types